Label changes, color changes and pdf layout issue fixed

--- a/src/app/client/src/app/modules/core/components/main-menu/main-menu.component.scss
+++ b/src/app/client/src/app/modules/core/components/main-menu/main-menu.component.scss
@@ -85,13 +85,13 @@
   transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
   &.signin-btn {
     font: 12px/16px Georgia!important;
-    color: #a32020;
+    color: #1a237e;
     background-color: #ffffff;
-    border: 2px solid #a32020;
+    border: 2px solid #1a237e;
     &:hover {
       color: #ffffff !important;
-      background-color: #a32020 !important;
-      border-color: #a32020 !important;
+      background-color: #1a237e !important;
+      border-color: #1a237e !important;
     }
   }
 }
